# llm

./: .gitignore  .gitmodules  AGENTS.md  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  wiki-sync.yml
configs/eval/: english_talk_suite_v1.json  (+10 more)
data/: README.md
docs/: ARCHITECTURE.md  HF_RELEASE_AND_DEPLOY.md  ROADMAP.md  RTX5070_TUNING.md  SERVER_SETUP.md
information/: README.md  raschka-implementation-checklist.md  raschka-reference-notes.md
requirements/: server-python-train.txt  server-system-ubuntu.txt
scripts/: benchmark_rtx5070_context_profiles.sh  bootstrap_dev.sh  bootstrap_inference.sh  bootstrap_train.sh  checkpoint_offload_prune.sh  checkpoint_step_offload.sh  doctor.sh  enforce_hot_only_manifests.py  eval_checkpoint_prompts.py  fineweb_edu_shard_guard.sh  fineweb_edu_shard_loop.sh  fineweb_manifest_dedupe.py  fineweb_parquet_to_shards.py  fineweb_prefetch_hot_queue.sh  fineweb_prefetch_watchdog.sh  fineweb_stage_shard_loop.sh  fineweb_stage_shard_watchdog.sh  first_pass_zim_profile.sh  hf_download_model.sh  hf_download_resumable.sh  hf_download_watchdog.sh  hf_prepare_and_publish_model.py  hot_shard_warmup.py  hydrate_from_warm_storage.sh  install_server_system.sh  install_systemd_services.sh  install_user_systemd_services.sh  lr_sweep_rtx5070_fineweb_350bt_ctx512.sh  offload_shard_bins_to_warm.py  package_inference_bundle.py  parquet_to_corpus.py  pipeline_eta_report.py  pipeline_live_view.py  publish_wiki.sh  pull_hf_rows.py  reconcile_offloaded_manifests.py  render_eval_trend_dashboard.py  revalidate_bad_parquet.py  run_openai_server.sh  set_swappiness.sh  (+11 more)
tests/: test_audit.py  test_checkpoints.py  test_cli.py  test_corpus.py  test_data.py  test_eval_policy.py  test_eval_suites.py  test_fineweb_guardrails.py  test_fineweb_scripts.py  test_generate.py  test_integrity.py  test_ops_scripts.py  test_sharding.py  test_tokenizer.py  test_train.py  test_zim.py
wiki/: Architecture-and-Roadmap.md  Data-Pipeline-and-Versioning.md  Dataset-Registry.md  Development-Workflow.md  Home.md  References.md  Release-and-Deployment.md  Setup-and-Tooling.md  _Sidebar.md
(+43 files in other folders)
