[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-from-scratch"
version = "0.1.0"
description = "Foundational toolkit for building a decoder-only language model from scratch."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
  "black>=24.0.0",
  "mypy>=1.8.0",
  "ruff>=0.3.0",
]
train = [
  "torch>=2.2.2",
  "tiktoken>=0.5.1",
  "matplotlib>=3.7.1",
  "numpy>=1.26",
  "pandas>=2.2.1",
  "tqdm>=4.66.1",
]
notebook = [
  "jupyterlab>=4.0",
]
data = [
  "libzim>=3.8.0",
]
compat = [
  "tensorflow>=2.16.2; sys_platform == 'darwin' and platform_machine == 'x86_64'",
  "tensorflow>=2.18.0; sys_platform != 'darwin' or platform_machine != 'x86_64'",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
pretty = true
